fixes to icomoon alignment

--- a/fed-aem/app/styles/sass/components/_featured-item.scss
+++ b/fed-aem/app/styles/sass/components/_featured-item.scss
@@ -88,7 +88,8 @@
 		&.-right{float: right;}
 		&.-left{float:left;}
 		&.-center{
-			div{margin: 0 auto;}}
+			div{margin: 0 auto;}
+			span{text-align: center; display: block;}}
 	}
 	
 	&.-right { @include clearfix;
